# QR

./: .gitignore  README.md  creator.py  poly.py  pyproject.toml
src/qr/: __init__.py  __main__.py  builder.py  constants.py  creator.py  decoder.py  encoder.py  gui.py  poly.py  visualizer.py
src/qr/res/: function_patterns.txt
